[package]
name = "xee-xslt-compiler"
version = "0.1.2"
edition = "2021"
authors = ["The Xee Project Developers"]
keywords = ["xml", "xslt"]
license = "MIT"
description = "XSLT 3.0 compiler to Xee IR"
repository = "http://github.com/Paligo/xee"
readme = "README.md"
documentation = "https://docs.rs/xee-xslt"
homepage = "https://github.com/Paligo/xee"

[features]
serde = ["xee-xslt-ast/serde", "xee-interpreter/serde"]

[dependencies]
xee-name = { path = "../xee-name", version = "0.1.2" }
xee-xpath-ast = { path = "../xee-xpath-ast", version = "0.1.1" }
xee-xpath-compiler = { path = "../xee-xpath-compiler", version = "0.1.2" }
xee-xslt-ast = { path = "../xee-xslt-ast", version = "0.1.2" }
xee-schema-type = { path = "../xee-schema-type", version = "0.1.2" }
xee-interpreter = { path = "../xee-interpreter", version = "0.1.2" }
xee-ir = { path = "../xee-ir", version = "0.1.2" }
ahash = { workspace = true }
iri-string = { workspace = true }
ordered-float = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
ibig = { workspace = true }
thiserror = { workspace = true }
xot = { workspace = true }


[dev-dependencies]
insta = { workspace = true, features = ["yaml", "glob"] }
rust_decimal_macros = { workspace = true }
