[package]
name = "xee-xslt"
version = "0.1.0"
edition = "2021"
authors = ["Martijn Faassen <faassen@startifact.com>"]
keywords = ["xml", "xslt"]
license = "Apache-2.0"
description = "XSLT 3.0 library"
repository = "http://github.com/Paligo/xee"
readme = "README.md"
documentation = "https://docs.rs/xee-xslt"
homepage = "https://github.com/Paligo/xee"

[features]
serde = ["xee-xslt-ast/serde", "xee-interpreter/serde"]

[dependencies]
ahash = { workspace = true }
ordered-float = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
ibig = { workspace = true }
thiserror = { workspace = true }
xot = { workspace = true }
xee-name = { path = "../xee-name" }
xee-xpath-ast = { path = "../xee-xpath-ast" }
xee-xpath = { path = "../xee-xpath" }
xee-xslt-ast = { path = "../xee-xslt-ast" }
xee-schema-type = { path = "../xee-schema-type" }
xee-interpreter = { path = "../xee-interpreter" }
xee-ir = { path = "../xee-ir" }

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml", "glob"] }
rust_decimal_macros = { workspace = true }
