[package]
name = "xee"
version = "0.1.0"
edition = "2021"
authors = ["Martijn Faassen <faassen@startifact.com>"]
keywords = ["xml", "xpath"]
license = "Apache-2.0"
description = "Xee CLI for XPath and XSLT"
repository = "http://github.com/Paligo/xee"
readme = "README.md"
documentation = "https://docs.rs/xee"
homepage = "https://github.com/Paligo/xee"

[dependencies]
xot = { workspace = true }
xee-xpath = { path = "../xee-xpath" }
clap = { workspace = true, features = ["derive", "cargo"] }
ariadne = "0.3.0"
anyhow.workspace = true
regex = { workspace = true }
rustyline = "14.0.0"
ahash = { workspace = true }
const_format = "0.2.33"

[build-dependencies]
build-data = "0"

[dev-dependencies]
